--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,7 +15,6 @@
 
 .iconList {
   display: flex;
-  align-items: center;
   margin-left: 20px; /* This plus the container's padding will make it 50px from left */
 }
 
@@ -27,10 +26,35 @@
 
 .button {
   padding: 10px 20px;
-  font-size: 16px;
+  overflow: hidden;
   cursor: pointer;
   border-radius: 5px;
   background-color: transparent;
-  color: var(--color-green);
+  position: relative;
   border: 1px solid var(--color-green);
+}
+
+.buttonText{
+  position: relative;
+  z-index: 10;
+  pointer-events: none;
+  font-size: 16px;
+  color: var(--color-green);
+  mix-blend-mode: difference;
+}
+
+.hoverEffect{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(8);
+  pointer-events: none;
+  height: 25px;
+  width: 25px;
+  border-radius: 9999px;
+  background: radial-gradient(
+    circle at center,
+    rgba(47, 225, 154, 0.18) 0%,
+    rgba(47, 225, 154, 0) 70%
+  );
 }
