--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -31,7 +31,7 @@ h1 {
   .description {
     font-size: 16px;
     line-height: 1.5;
-    margin-bottom: 6px;
+    margin-bottom: 16px;
     font-weight: 200;
   }
 
@@ -43,4 +43,5 @@ h1 {
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+    text-decoration: none;
   }
