--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -32,6 +32,8 @@
   background-color: transparent;
   position: relative;
   border: 1px solid var(--color-green);
+  
+  
 }
 
 .buttonText{
@@ -41,6 +43,7 @@
   font-size: 16px;
   color: var(--color-green);
   mix-blend-mode: difference;
+  text-decoration: none;
 }
 
 .hoverEffect{
